kubernetes/apps/vm-ingress/plex.yaml
---
# IngressRoute for plex.ericsweiss.com (public - external domain)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: ${cluster_external_domain}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.${cluster_external_domain}`)
      kind: Rule
      middlewares:
        - name: hsts-header
          namespace: traefik
      services:
        - name: plex-backend
          port: 32400
          scheme: https
          serversTransport: vm-tls-wildcard
  tls:
    secretName: ericsweiss-com-tls
---
# IngressRoute for plex.esweiss.com (internal domain)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-internal
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.${cluster_internal_domain}`)
      kind: Rule
      middlewares:
        - name: lan-tailscale-only
          namespace: traefik
        - name: hsts-header
          namespace: traefik
      services:
        - name: plex-backend
          port: 32400
          scheme: https
          serversTransport: vm-tls-wildcard
  tls:
    secretName: esweiss-com-tls
